# funnel_metadynamics

./: README.md  env.yml  example.ipynb  hello.py  pyproject.toml
src/funnel/: cv.py  funnels.py  gui.py  ref_gui.py
